test/config/cluster-resources.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: serving-tests
---
apiVersion: v1
kind: Namespace
metadata:
  name: serving-tests-alt
---
apiVersion: v1
kind: Namespace
metadata:
  name: tls
---
apiVersion: v1
kind: Namespace
metadata:
  name: rq-test
